--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -483,6 +483,11 @@ h1, h1.title {
 .terms-conditions {
 	margin: 20px 0;
 }
+
+.terms-copy li {
+	font-size: 11px !important;
+}
+
 .module .toolbar {
   height: 39px;
   background-color: #f3f3f3;
@@ -1176,7 +1181,7 @@ table.search-criteria .remove {
 	text-align: right;
 }
 
-.action-btn, #modal .button {
+.action-btn {
   color: #1e2171;
   display: inline-block;
   height: 22px;
@@ -1185,8 +1190,8 @@ table.search-criteria .remove {
   border: 1px solid #a6a6a6;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  margin-right: 0px;
-  margin-left: 4px;
+  margin-right: 4px;
+  margin-left: 0px;
   font-size: 12px;
   font-weight: bold;
   cursor: pointer;
@@ -1571,6 +1576,7 @@ table.search-criteria .remove {
 .expand-criteria {
   	display: none;
 }
+
 .expand-criteria div {
   background: url("../img/table-info-tab.png") no-repeat center;
   height: 26px;
@@ -1620,79 +1626,33 @@ td .info {
 	margin-top: 20px;
 } 
 
-#modal {
-/* default fallback */
-  background: #000 transparent;
-/* nice browsers */
-  background: rgba(0,0,0,0.21);
-  position: fixed;
-  z-index: 50;
-  height: 100%;
-  width: 100%;
-  display: none;
-}
-
-#modal .modal-content {
-  background: #fff;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-background-clip: padding;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-  padding: 20px;
-}
-#modal .modal-content h4 {
-  margin: 0;
-}
-#modal .modal-close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: url("../img/modal-close.jpg") no-repeat;
-  height: 18px;
-  width: 18px;
-  cursor: pointer;
-}
-
-#modal.prompt .alert-display {
-	display: none;
-}
-
-#modal.alert .prompt-display {
-	display: none;
-}
 
 .modal-container {
-  top: 20%;
-  position: fixed;
-  left: 50%;
-  margin-left: -278px;
-  width: 550px;
-  background: rgba(0,0,0,0.17);
-  border: 6px solid transparent;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
+	padding: 0 20px 20px 20px;
+	overflow-x: hidden;
 }
 
 .modal-container h4 {
   font: bold 18px Arial, Helvetica, sans-serif;
   color: gray2;
-  margin-bottom: 8px;
+  margin: -5px 0 8px 0;
 }
 
 .modal-container h4 span {
-  font: normal 11px Arial, Helvetica, sans-serif;
-  color: gray2;
+	font: normal 11px Arial, Helvetica, sans-serif;
+	color: gray2;
 }
 
-.close-button {
-  background: url("../img/modal-close.jpg") no-repeat;
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
+.modal-container .nav .action-btn {
+	display: none;
+}
+
+.modal-container.prompt .nav .action-btn.prompt-display {
+	display: inline-block;
+}
+
+.modal-container.alert .nav .action-btn.alert-display {
+	display: inline-block;
 }
 
 .alphas-page .module-results {
@@ -1744,7 +1704,7 @@ td.unchart {
 }
 
 .customize-display-table {
-	width: 110%;
+	width: 500px;
 	margin-bottom: 20px;
 }
 
@@ -1769,12 +1729,9 @@ td.unchart {
 }
 
 .percentChange-container {
-	margin-bottom: 10px;
-}
-
-.percentChange-container div, .percentChange-container p {
-	font-size: 11px;
-	margin-top:10px;
+	width: 600px;
+	height: 300px;
+	overflow-x: hidden;
 }
 
 .percentChange-container .column {
