--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -32,15 +32,13 @@ h1, h1.title {
   line-height: 42px;
 }
 
-.page-title {
-  margin: 0 0 10px 0;
-  width: 100%;
-  height: 42px;
+td .page-title {
+  width: 75%;
+  padding-right: 10px;
 }
 
-.company-tearsheet-page .page-title, .related-page .page-title, .financials-page .page-title {
-	margin-top: 10px;
-	margin-bottom: 20px;
+.company-header {
+	margin: 10px 0 10px 0;
 }
 
 .page-title, .page-title span {
@@ -1310,13 +1308,13 @@ table.search-criteria .remove {
   color: #fff;
   text-decoration: none;
 }
+
 .breadcrumb {
   background: #f2f2f2;
-  height: 25px;
-  margin-bottom: 10px;
   font-size: 12px;
-  position: relative;
+  width: 50%;
 }
+
 .breadcrumb .button {
   display: inline-block;
   background: #1e2171;
@@ -1326,11 +1324,13 @@ table.search-criteria .remove {
   padding: 0 10px;
   color: #fff;
 }
+
 .back-company-profile {
   font: bold 12px Arial, Helvetica, sans-serif;
   color: #1e2171;
   border: none;
   text-decoration: none;
+  display: none;
 }
 
 .legend-note {
@@ -1378,16 +1378,12 @@ table.search-criteria .remove {
   position: relative;
   right: 0px;
 }
-.right-nav {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-}
+
 .print-button {
   display: inline-block;
-  position: relative;
   margin-right: 10px;
 }
+
 .comparable-button {
   display: inline-block;
 }
@@ -1411,12 +1407,12 @@ table.search-criteria .remove {
   display: inline-block;
   padding-left: 20px;
 }
+
 .stock-price {
 	display: none;
-	position: absolute;
-	top: 10px;
-	right: 0px;
+	width: 25%;
 	text-align: right;
+	vertical-align: bottom;
 }
 
 .stock-price .main, .stock-price .main * {
@@ -1639,6 +1635,10 @@ td .info {
 
 .alphas-page .factors-wrapper {
 	margin-top: 20px;
+} 
+
+.alphas-page .company-row, .alphas-page .no-company-row {
+	display: none;
 } 
 
 
