updated results display for no results

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -34,7 +34,10 @@ body * {
 }
 
 .no-results-display {
-	margin: 10px;
+	margin: 10px 0 20px 0;
+	padding: 15px;
+	border: 1px solid #CCC;
+	font-weight: bold;
 }
 
 h1, h1.title {
