--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -609,23 +609,23 @@ td .page-title {
 }
 
 .progress-estimate .theme-three-bubble-progress.opt-1 {
-	background: url("../img/progress-3-step-1.jpg") no-repeat;	
+	background: url("../img/consensus-step-1.jpg") no-repeat;	
 }
 
 .progress-estimate .theme-three-bubble-progress.opt-2 {
-	background: url("../img/progress-3-step-2.jpg") no-repeat;	
+	background: url("../img/consensus-step-2.jpg") no-repeat;	
 }
 
 .progress-estimate .theme-three-bubble-progress.opt-3 {
-	background: url("../img/progress-3-step-3.jpg") no-repeat;	
+	background: url("../img/consensus-step-3.jpg") no-repeat;	
 }
 
 .progress-estimate .theme-three-bubble-progress.opt-4 {
-	background: url("../img/progress-3-step-4.jpg") no-repeat;	
+	background: url("../img/consensus-step-4.jpg") no-repeat;	
 }
 
 .progress-estimate .theme-three-bubble-progress.opt-5 {
-	background: url("../img/progress-3-step-5.jpg") no-repeat;	
+	background: url("../img/consensus-step-5.jpg") no-repeat;	
 }
 
 
