--- a/trunk/client/template/company-header.html
+++ b/trunk/client/template/company-header.html
@@ -8,7 +8,7 @@
 <td valign="bottom">
 <span class="stock-price">
 <div class="main">
-S$ <span class="lastPrice formattable" data-format="number">--</span>
+<span class="currency"></span>$ <span class="lastPrice formattable" data-format="number">--</span>
 &nbsp;
 <span class="change">--</span>
 </div>
