--- a/trunk/client/template/company-header.html
+++ b/trunk/client/template/company-header.html
@@ -15,7 +15,7 @@
 <div class="last-updated">Last Price:&nbsp;
 <span class="date">
 <span class="day">--</span>&nbsp;
-<span class="time">--</span>
+<span class="time">--</span> SGT
 </span>
 </div>
 </span>
