--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1749,7 +1749,7 @@ td.unchart {
 }
 
 .customize-display-table {
-	width: 500px;
+	width: 520px;
 	margin-bottom: 20px;
 }
 
@@ -1775,12 +1775,17 @@ td.unchart {
 
 .percentChange-container {
 	width: 600px;
-	height: 300px;
+	height: 330px;
 	overflow-x: hidden;
+}
+
+.percentChange-container span div {
+	margin-top: 4px;
 }
 
 .percentChange-container .column {
 	margin-right: 20px;
+	margin-bottom: 10px;
 }
 
 .percentChange-container input {
