--- a/client/stylesheets/print.css
+++ b/client/stylesheets/print.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
+    min-width: 1012px;
 }
 
 body * {
@@ -48,10 +49,26 @@ td {
 }
 
 .container_3 {
+	width: 1008px;
+}
+
+.grid_1, .grid_2, .grid_3, .grid_4 {
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 .row {
 	padding: 5px 25px 5px 25px;
+}
+
+.container_3 .grid_1 {
+    width:324px;
+}
+.container_3 .grid_2 {
+    width:660px;
+}
+.container_3 .grid_3 {
+    width:996px;
 }
 
 .column50 {
