--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -1824,6 +1824,35 @@ td.unchart {
   font-size: smaller;
 }
 
+.brokers {
+	width: 700px;
+	margin-top: 20px;
+	margin-bottom: 15px;
+}
+
+.brokers .results-display {
+	padding: 10px;
+	background-color: #EFEFEF;
+}
+
+.brokers .results-display span {
+	margin: 10px;
+	border: 9px solid #d8d8d8;
+	display: inline-block;
+	cursor: pointer;
+	height: 69px;
+}
+
+.brokers .results-display span:hover {
+	border: 9px solid #b5cf34;	
+}
+
+.trade-button {
+	background-color: #809800;
+	margin-left: 180px;
+	width: 100px;
+}
+
 #loading {
   width: 100%;
   height: 100%;
