--- a/client/template/company-header.html
+++ b/client/template/company-header.html
@@ -25,10 +25,10 @@
 <table cellpadding="0" cellspacing="0" border="0" width="100%" class="company-header">
 <tr>
 <td class="breadcrumb">
-<span class="button back-button"><a href="index.html" class="screener-link">Back to Stock Screener</a></span>
+<span class="button back-button"><a href="index.html" class="screener-link">Back to StockFacts</a></span>
 </td>
 <td class="breadcrumb right">
-<div class="print-button">Print</div>
+<div class="print-button">Download/Print</div>
 <div class="button comparable-button">Find comparable companies</div>
 </td>
 </tr>
